--- a/HighScores/SWA.Highscores.InClass/MainWindow.xaml
+++ b/HighScores/SWA.Highscores.InClass/MainWindow.xaml
@@ -5,20 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SWA.Highscores.InClass"
         mc:Ignorable="d"
-        Title="HighScore List" Height="184" Width="522">
+        Height="200" Width="500" MinHeight="200" MinWidth="500">
+    <!-- 
+        equals to set the Title Attribute in Window-Element but
+        allows complex objects 
+    -->
+    <Window.Title>HighScore List</Window.Title>
+    <!-- 
+        here a complex object is defined 
+        (like DataContext = new MainViewModel, but in Xaml)
+    -->
     <Window.DataContext>
         <local:MainViewModel></local:MainViewModel>
     </Window.DataContext>
+    <Window.Resources>
+        <local:OverOneThousandIntToColorConverter x:Key="ColorConverter" />
+    </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <DataGrid Grid.Row="1" Margin="5"/>
-        <TextBox Grid.Row="0" Margin="57,16,0,16" HorizontalAlignment="Left" Width="120" Text="{Binding PlayerName}"></TextBox>
-        <Label Grid.Row="0" Content="Name" HorizontalAlignment="Left" Height="30" Margin="10,0,0,0" VerticalAlignment="Center" Width="42"/>
-        <TextBox Grid.Row="0" Margin="236,16,194,16" Text="{Binding Points, Mode=TwoWay}" ></TextBox>
-        <Label Grid.Row="0" Content="Points" HorizontalAlignment="Left" Height="30" Margin="189,0,0,0" VerticalAlignment="Center" Width="42"/>
-        <Button Grid.Row="0" Content="Add" HorizontalAlignment="Left" Height="25" Margin="358,0,0,0" VerticalAlignment="Center" Width="76"/>
+
+        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Top">
+            <Label Content="Name"/>
+            <TextBox Text="{Binding PlayerName}" Margin="5" Width="100" Height="Auto"></TextBox>
+        </StackPanel >
+
+        <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Top">
+            <Label Content="Points" />
+            <TextBox x:Name="pointsTextBox"  Text="{Binding Points, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5" Width="100" Height="Auto" ></TextBox>
+        </StackPanel>
+
+        <Button Grid.Row="0" Grid.Column="2" Content="Add" Height="Auto" Margin="5" HorizontalAlignment="Stretch" Command="{Binding AddCommand}" CommandParameter="{Binding Text, ElementName=pointsTextBox}" />
+
+        <DataGrid Grid.Row="1" Grid.Column="0" Margin="5" Grid.ColumnSpan="3" ItemsSource="{Binding HighScoreItems}" AutoGenerateColumns="False" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Name}" Header="Player"/>
+                <DataGridTextColumn Binding="{Binding Points}" Header="Score">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="Background" Value="{Binding Points, Converter={StaticResource ColorConverter}}"></Setter>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+
     </Grid>
 </Window>
